# My_Data-_Science_Project-Julu-2025

./: AI_USAGE.md  README.md  pyproject.toml
config/: config.yaml
dashboards/: app.py
data/processed/: processed_energy_weather_data.csv
data/raw/: historical_energy.csv  historical_weather.csv
src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py
